--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
+    "@astrojs/mdx": "^4.0.0",
     "@astrojs/tailwind": "^6.0.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
