--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,10 @@ jobs:
         
       - name: Build Astro site
         run: npm run build
+
+      - name: Ensure .nojekyll in artifact
+        run: |
+          touch ./dist/.nojekyll
         
       - name: Setup Pages
         uses: actions/configure-pages@v4
