--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/react": "^4.3.0",
+    "@astrojs/markdown-remark": "^6.3.6",
     "@astrojs/mdx": "^4.0.0",
+    "@astrojs/react": "^4.3.0",
     "@astrojs/tailwind": "^6.0.2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -18,9 +19,11 @@
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.23.3",
     "marked": "^16.0.0",
+    "mermaid": "^11.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16"
